NEWS - OpenPrinting CUPS Filters v1.19.0 - 2018-01-15
-----------------------------------------------------

CHANGES IN V1.20.0

	- cups-browsed, driverless: Fixed get-printer-attributes call
	  on driverless printers for generating the PPD, explicitly
	  requesting the media-col-database attribute as otherwise
	  borderless page sizes do not appear.
	- libcupsfilters: Fixed loading option/choice strings lists
	  from driverless printers for PPD file generation. Especially
	  proprietary media types appear correctly now.
	- libcupsfilters: Completed color space support in the PPD
	  generator: Added DeviceGray/RGB/CMYK, default to 8 bit for
	  SRGB and to 16 bit for AdobeRGB, avoid duplicate listings of
	  the same color space.

CHANGES IN V1.19.0

	- libcupsfilters: Let the PPD generator add the options "Print
	  Optimization", "Print Rendering Intent" and "Print Scaling"
	  if appropriate IPP attributes are found.
	- libcupsfilters: Let the PPD generator read out the maximum
	  of info about color spaces and this way not only reliably
	  the correct choices are added to the ColorModel option but
	  also the maximum supported bit depth (8 or 16 bit) is used.
	- libcupsfilters: Overtaken new features from CUPS' PPD
	  generator: Presets, Finishing Templates, and extraction of
	  media sizes from "media-col-database"
	- libcupsfilters: Improvements on header of generated PPDs:
	  use cups-filters version number, "drvless.ppd" PCFileName,
	  APSupplies and cupsChargeInfoURI from CUPS.
	- libcupsfilters: Let the PPD generator use the IPP string
	  tables in the translation files of CUPS 2.3.x or newer
	  (English strings only). Let all options in the PPD have
	  human-readable option and choice names. In case of CUPS
	  2.2.x or older (or if the CUPS translation are missing) we
	  fall back to internal tables.
	- cups-browsed: Improved debug output when checking IPP
	  attributes of IPP printers.
	- .gitignore: Ignore also core files.